/**
 * This module contains the application logic of an echo server
 * which uses a stream-mode socket for interprocess communication.
 * Unlike EchoServer2, this server services clients concurrently.
 * A command-line argument is required to specify the server port.
 * @author M. L. Liu
 */

public class TMPServer {
   public static void main(String[] args){
   ServerGUI gui = new ServerGUI();
   } //end main
} // end class
